force-app/main/default/objects/ConfiguracaoPropostaCompra__mdt/ConfiguracaoPropostaCompra__mdt.object-meta.xml
<CustomObject>
    <label>Configuração proposta de compra</label>
    <pluralLabel>Configurações propostas de compras</pluralLabel>
</CustomObject>