force-app/main/default/objects/ConfiguracaoPropostaCompra__mdt/fields/DiasEntregaChavesMetadata__c.field-meta.xml
<CustomField>
    <fullName>DiasEntregaChavesMetadata__c</fullName>
    <label>Dias para entrega de chaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>