force-app/main/default/objects/ConfiguracaoPropostaCompra__mdt/fields/PercentualComissao__c.field-meta.xml
<CustomField>
    <fullName>PercentualComissao__c</fullName>
    <label>Percentual de comissão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>